src/test/ui/coherence/coherence-with-generator.stderr
error: cannot implement trait on type alias impl trait
  --> $DIR/coherence-with-generator.rs:14:24
   |
LL | impl Trait for Wrapper<OpaqueGenerator> {}
   |                        ^^^^^^^^^^^^^^^
   |
note: type alias impl trait defined here
  --> $DIR/coherence-with-generator.rs:3:24
   |
LL | type OpaqueGenerator = impl Sized;
   |                        ^^^^^^^^^^

error[E0119]: conflicting implementations of trait `Trait` for type `Wrapper<OpaqueGenerator>`
  --> $DIR/coherence-with-generator.rs:16:1
   |
LL | impl Trait for Wrapper<OpaqueGenerator> {}
   | --------------------------------------- first implementation here
LL |
LL | impl<T: Sync> Trait for Wrapper<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Wrapper<OpaqueGenerator>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0119`.
